# health-calc

./: README.md  pyproject.toml
health_calc/: main.py
health_calc/imc/: imc.py
health_calc/people/: people.py
health_calc/utils/: utils.py
tests/: test_imc_calc.py
